# TORUM

TORUM/: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  nginx.conf  nginx.http.conf  pyproject.toml
TORUM/backend/: Dockerfile  requirements.txt
TORUM/backend/alembic/: env.py
TORUM/backend/alembic/versions/: 1dd0b1e19c5a_update_document_constraints.py  739a922e97ec_update_user_role_add_constraint.py  86f68104fe8a_delete_refresh_token_and_blacklisted_.py  a552502eca2f_add_full_text_search_queries.py  c9a44e1e216a_initial_migration.py  ce39a85bcc20_initial_revision.py  fc0600dcc981_update_user_role.py
TORUM/backend/app/: auth.py  crud.py  database.py  main.py  schemas.py
TORUM/backend/src/: config.py  database.py  main.py
TORUM/backend/src/auth/: config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py  utils.py
TORUM/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
TORUM/frontend/src/: App.tsx  main.tsx
TORUM/frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
TORUM/frontend/src/context/: AuthContext.tsx
TORUM/frontend/src/pages/: AccountManagement.tsx  DocumentList.tsx  Home.tsx  Login.tsx  Post.tsx  PostDetail.tsx  PostView.tsx  Search.tsx  Signup.tsx  UploadDocument.tsx
TORUM/frontend/src/services/: api.ts
TORUM/frontend/src/types/: index.ts
TORUM/frontend/src/utils/: auth.ts
